--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ dependencies = [
     "packaging>=20.0",
     "pandas>=1.1.0",
     "psygnal>=0.3.1",
-    "pydantic>=1.9.1",
+    "pydantic>=1.9.1,<3",
     "pygments>=2.12.0",
     "qtconsole>=4.7.7",
     "requests>=2.18.0",
@@ -207,6 +207,7 @@ filterwarnings = [
     "ignore:Converting `np.character` to a dtype",
     "ignore:Public access to Window.qt_viewer",
     "ignore:Pydantic V1 style `@validator`",
+    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
 ]
 markers = [
     "enablethread: Allow to use thread in test",
