--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ dependencies = [
     "pydantic>=1.9.1,<3",
     "pygments>=2.12.0",
     "qtconsole>=4.7.7",
-    "requests>=2.18.0",
+    "requests>=2.25.0",
     "scipy>=1.4.1",
     "sentry-sdk>=2.0.0",
     "six>=1.11.0",
@@ -207,7 +207,17 @@ filterwarnings = [
     "ignore:Converting `np.character` to a dtype",
     "ignore:Public access to Window.qt_viewer",
     "ignore:Pydantic V1 style `@validator`",
-    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
+    "ignore:Support for class-based `config` is deprecated",
+    "ignore:`__get_validators__` is deprecated",
+    "ignore:Using extra keyword arguments on `Field` is deprecated",
+    "ignore:The `update_forward_refs` method is deprecated;",
+    "ignore:The `copy` method is deprecated; use",
+    "ignore:The private method `_iter` will be removed and should no longer be used",
+    "ignore:The `validate` method is deprecated; use `model_validate` instead.",
+    "ignore:The `schema_json` method is deprecated; use `model_json_schema` and json.dumps instead.",
+    "ignore:The `dict` method is deprecated; use `model_dump`",
+    "ignore:The `__fields__` attribute is deprecated",
+#    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
     "ignore:Jupyter is migrating its paths to use standard platformdirs",
     "ignore:Please import `zoom`::czifile:193",
 ]
