--- a/tox.ini
+++ b/tox.ini
@@ -84,14 +84,14 @@ deps =
     napari_5: napari==0.5.0
     napari_repo: git+https://github.com/napari/napari.git
 commands =
-    !napari_repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
-    napari_repo: python -m pytest package/tests --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    !napari_repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json {posargs}
+    napari_repo: python -m pytest package/tests --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json {posargs}
 
 [testenv:py{38,39,310,311,312}-PyQt5-coverage]
 deps =
     {[testenv]deps}
 commands =
-    coverage run --concurrency=multiprocessing -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    coverage run --concurrency=multiprocessing -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json {posargs}
 
 [testenv:py38-PyQt5-minimal]
 min_req = 1
@@ -106,7 +106,7 @@ deps =
     setuptools_scm[toml]>=3.4
     lxml_html_clean
 commands =
-    coverage run -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    coverage run -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json {posargs}
 
 [testenv:py{38,39,310,311,312}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
 deps =
