refactor: Make warnings error in tests (#1192)
Change `pytest` configuration to change warnings into errors in the
tests.

Fix code that emites warning.

<!-- Generated by sourcery-ai[bot]: start summary -->

## Summary by Sourcery

Convert warnings to errors in tests by updating the `pytest`
configuration and refactor code to handle warnings appropriately.
Enhance the `sentry_sdk` usage by replacing `push_scope` with
`new_scope`. Improve data handling in `batch_backend.py` and update
tests to align with these changes.

Bug Fixes:
- Fix the `test_no_update` test to correctly handle URL errors by using
`urllib.error.URLError`.
- Correct the `test_ignore_file_exists_old_date` test to assert the
correct release version and URL.

Enhancements:
- Update the `sentry_sdk` usage to replace `push_scope` with `new_scope`
for better scope management.
- Improve the `CheckVersionThread` initialization by updating the
default URL to a more relevant one.
- Enhance the `get_data_to_write` method in `batch_backend.py` to handle
empty data frames more efficiently.
- Refactor the `decode_zstd1` and `decode_zstd0` functions to use
`np.frombuffer` instead of `np.fromstring` for better performance and
compatibility.

Tests:
- Modify tests to treat warnings as errors by updating the `pytest`
configuration.
- Update tests to reflect changes in the `sentry_sdk` scope management.

<!-- Generated by sourcery-ai[bot]: end summary -->

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

## Release Notes

- **New Features**
- Enhanced handling of color information in ROI parameters, allowing for
greater flexibility with color keys.
- Improved compatibility with newer versions of `napari` by adjusting
colormap settings.

- **Bug Fixes**
- Ensured default color values are returned correctly when no regions of
interest are present.

- **Documentation**
	- Updated type annotations for better clar

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,12 +61,12 @@ dependencies = [
     "packaging>=20.0",
     "pandas>=1.1.0",
     "psygnal>=0.3.1",
-    "pydantic>=1.9.1",
+    "pydantic>=1.9.1,<3",
     "pygments>=2.12.0",
     "qtconsole>=4.7.7",
-    "requests>=2.18.0",
+    "requests>=2.25.0",
     "scipy>=1.4.1",
-    "sentry-sdk>=0.14.3",
+    "sentry-sdk>=2.4.0",
     "six>=1.11.0",
     "superqt>=0.3.0",
     "sympy>=1.1.1",
@@ -191,6 +191,8 @@ testpaths = [
 junit_family = "legacy"
 timeout = 900
 filterwarnings = [
+    "error:::PartSeg", # turn warnings from napari into errors
+    "error:::test_.*", # turn warnings in our own tests into errors
     "ignore:invalid value encountered",
     "ignore:The 'junit_family' encountered",
     "ignore:numpy.ufunc size changed, may indicate",
@@ -204,6 +206,22 @@ filterwarnings = [
     "ignore:Please use `zoom` from the `scipy.ndimage` namespace",
     "ignore:Converting `np.character` to a dtype",
     "ignore:Public access to Window.qt_viewer",
+    "ignore:Pydantic V1 style `@validator`",
+    "ignore:Support for class-based `config` is deprecated",
+    "ignore:`__get_validators__` is deprecated",
+    "ignore:Using extra keyword arguments on `Field` is deprecated",
+    "ignore:The `update_forward_refs` method is deprecated;",
+    "ignore:The `copy` method is deprecated; use",
+    "ignore:The private method `_iter` will be removed and should no longer be used",
+    "ignore:The `validate` method is deprecated; use `model_validate` instead.",
+    "ignore:The `schema_json` method is deprecated; use `model_json_schema` and json.dumps instead.",
+    "ignore:The `dict` method is deprecated; use `model_dump`",
+    "ignore:The `__fields__` attribute is deprecated",
+#    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
+    "ignore:Jupyter is migrating its paths to use standard platformdirs",
+    "ignore:ipykernel\\.:DeprecationWarning", # connected with min requirements, check after bump
+    "ignore:Please import `zoom`::czifile:193",
+    "ignore:__array__ implementation doesn't accept a copy keyword" # hp5y==3.11 warning, need update
 ]
 markers = [
     "enablethread: Allow to use thread in test",
