Auto add "skip check PR title"  label in update dependecies PR

--- a/.github/workflows/upgrade-dependencies.yml
+++ b/.github/workflows/upgrade-dependencies.yml
@@ -67,3 +67,5 @@ jobs:
 
             ${{ steps.packages.outputs.all_packages }}
           token: ${{ secrets.GHA_TOKEN }}
+          labels: |
+            skip check PR title
