pin typing-extensions

--- a/tox.ini
+++ b/tox.ini
@@ -94,6 +94,8 @@ commands =
 
 [testenv:py39-PyQt5-minimal]
 min_req = 1
+min_req_constraints=
+    typing-extensions==4.5.0
 setenv =
     MINIMAL_REQUIREMENTS=1
     PIP_CONSTRAINT=
