--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,24 +50,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python_version: ["3.9", "3.10", "3.11", "3.12"]
         os: ["ubuntu-20.04"]
         qt_backend: ["PyQt5"]
         tox_args: [ "" ]
         include:
-          - python_version: "3.9"
+          - python_version: "3.11"
             os: "macos-13"
             qt_backend: "PyQt5"
-          - python_version: "3.9"
+          - python_version: "3.11"
             os: "windows-2019"
             qt_backend: "PyQt5"
-          - python_version: "3.9"
+          - python_version: "3.10"
             os: "ubuntu-20.04"
             qt_backend: "PySide2"
-          - python_version: "3.9"
+          - python_version: "3.10"
             os: "ubuntu-22.04"
             qt_backend: "PySide6"
-          - python_version: "3.10"
+          - python_version: "3.12"
             os: "ubuntu-22.04"
             qt_backend: "PyQt6"
           - python_version: "3.10"
@@ -90,20 +90,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python_version: ["3.9", "3.10", "3.11", "3.12"]
         os: ["ubuntu-20.04", "macos-13", "windows-2019"]
         qt_backend: ["PySide2", "PyQt5"]
         include:
-          - python_version: "3.11"
+          - python_version: "3.12"
             qt_backend: "PyQt5"
             os: "ubuntu-22.04"
-          - python_version: "3.9"
+          - python_version: "3.10"
             os: "ubuntu-22.04"
             qt_backend: "PySide6"
-          - python_version: "3.9"
+          - python_version: "3.11"
             os: "ubuntu-22.04"
             qt_backend: "PyQt6"
-          - python_version: "3.10"
+          - python_version: "3.11"
             os: "ubuntu-22.04"
             qt_backend: "PyQt5"
             pydantic: "_pydantic_1"
@@ -124,8 +124,8 @@ jobs:
     uses: ./.github/workflows/base_test_workflow.yml
     with:
       test_data: True
-      python_version: "3.10"
-      tox_args: "-e py310-PyQt5-coverage"
+      python_version: "3.12"
+      tox_args: "-e py312-PyQt5-coverage"
       coverage: true
 
   test_minimal:
@@ -134,8 +134,8 @@ jobs:
     uses: ./.github/workflows/base_test_workflow.yml
     with:
       test_data: True
-      python_version: "3.8"
-      tox_args: "-e py38-PyQt5-minimal"
+      python_version: "3.9"
+      tox_args: "-e py39-PyQt5-minimal"
       coverage: true
 
   coverage_prepare:
