--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -33,46 +32,46 @@ keywords = [
     "bioimaging",
     "GUI",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
     "IPython>=7.7.0",
     "PartSegCore-compiled-backend>=0.13.11,<0.16.0",
     "PartSegData==0.10.0",
     "QtAwesome!=1.2.0,>=1.0.3",
     "QtPy>=1.10.0",
-    "SimpleITK>=2.0.0",
+    "SimpleITK>=2.1.0",
     "appdirs>=1.4.4",
     "czifile>=2019.5.22",
     "defusedxml>=0.6.0",
     "fonticon-fontawesome6>=6.1.1",
     "h5py>=3.3.0",
     "imagecodecs>=2020.5.30",
-    "imageio>=2.5.0",
+    "imageio>=2.20.0",
     "ipykernel>=5.2.0",
     "local-migrator>=0.1.7",
     "magicgui!=0.5.0,>=0.4.0",
-    "mahotas>=1.4.10",
-    "napari>=0.4.14",
+    "mahotas>=1.4.12",
+    "napari>=0.4.19",
     "nme>=0.1.7",
-    "numpy>=1.18.5 ; python_version >= '3.10'",
-    "numpy>=1.18.5, <2 ; python_version < '3.10'",
+    "numpy>=1.22.2 ; python_version >= '3.10'",
+    "numpy>=1.22.2, <2 ; python_version < '3.10'",
     "oiffile>=2020.1.18",
-    "openpyxl>=2.5.7",
-    "packaging>=20.0",
-    "pandas>=1.1.0",
-    "psygnal>=0.3.1",
+    "openpyxl>=3.0.7",
+    "packaging>=22.0",
+    "pandas>=1.3.0",
+    "psygnal>=0.3.4",
     "pydantic>=1.9.1,<3",
     "pygments>=2.12.0",
     "qtconsole>=4.7.7",
     "requests>=2.25.0",
-    "scipy>=1.4.1",
+    "scipy>=1.5.4",
     "sentry-sdk>=2.4.0",
     "six>=1.11.0",
-    "superqt>=0.3.0",
-    "sympy>=1.1.1",
+    "superqt>=0.4.1",
+    "sympy>=1.10",
     "tifffile>=2020.9.30",
     "traceback-with-variables>=2.0.4",
-    "vispy>=0.9.4",
+    "vispy>=0.14.1   ",
     "xlrd>=1.1.0",
     "xlsxwriter>=2.0.0",
 ]
@@ -128,7 +127,7 @@ pyqt5 = [
 ]
 pyqt6 = [
     "PyQt6",
-     "napari[pyqt6]>=0.5.0; python_version >= '3.9'",
+    "napari[pyqt6]>=0.5.0",
 ]
 pyside = [
     "PartSeg[pyside2]",
@@ -139,7 +138,7 @@ pyside2 = [
 ]
 pyside6 = [
     "PySide6",
-    "napari[pyside6_experimental]>=0.5.0; python_version >= '3.9'",
+    "napari[pyside6_experimental]>=0.5.0",
 ]
 test = [
     "coverage",
@@ -268,7 +267,7 @@ exclude_also = [
 
 [tool.black]
 line-length = 120
-target-version = ['py38']
+target-version = ['py39']
 include = '\.pyi?$'
 exclude = '''
 
@@ -294,7 +293,7 @@ exclude = '''
 [tool.ruff]
 line-length = 120
 exclude = ["examples/call_simple_threshold.py"]
-target-version = "py38"
+target-version = "py39"
 fix = true
 
 [tool.ruff.lint]
