--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,11 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-all, py{39,310,311,312}-{PyQt5,PyQt6}-napari_{417,418,419,5,repo}, py{39,310}-PySide2-napari_{417,418,419,5,repo}
+envlist = py{39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-all, py{39,310,311,312}-{PyQt5,PyQt6}-napari_{419,54,repo}, py{39,310}-PySide2-napari_{419,54,repo}
 toxworkdir=/tmp/tox
 
 [gh-actions]
 python =
-    3.8: py38
     3.9: py39
     3.10: py310
     3.11: py311
@@ -19,10 +18,8 @@ fail_on_no_env = True
 [gh-actions:env]
 NAPARI =
     latest: all
-    napari417: napari_417
-    napari418: napari_418
     napari419: napari_419
-    napari5: napari_5
+    napari54: napari_54
     repo: napari_repo
 BACKEND =
     pyqt: PyQt5
@@ -73,30 +70,26 @@ deps=
     pytest-json-report
     lxml_html_clean
 
-[testenv:py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,5,repo}]
+[testenv:py{39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{419,54,repo}]
 deps =
     {[testenv]deps}
-    napari_417: napari==0.4.17
-    napari_417: pydantic<2
-    napari_418: napari==0.4.18
-    napari_418: pydantic<2
     napari_419: napari==0.4.19.post1
-    napari_5: napari==0.5.0
+    napari_54: napari==0.5.4
     napari_repo: git+https://github.com/napari/napari.git
 commands =
     !napari_repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json {posargs}
     napari_repo: python -m pytest package/tests --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json {posargs}
 
-[testenv:py{38,39,310,311,312}-PyQt5-coverage]
+[testenv:py{39,310,311,312}-PyQt5-coverage]
 deps =
     {[testenv]deps}
 commands =
     coverage run --concurrency=multiprocessing -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json {posargs}
 
-[testenv:py38-PyQt5-minimal]
+[testenv:py39-PyQt5-minimal]
 min_req = 1
 min_req_constraints=
-    npe2==0.1.1
+    typing-extensions==4.5.0
 setenv =
     MINIMAL_REQUIREMENTS=1
     PIP_CONSTRAINT=
@@ -108,7 +101,7 @@ deps =
 commands =
     coverage run -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json {posargs}
 
-[testenv:py{38,39,310,311,312}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
+[testenv:py{39,310,311,312}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
 deps =
     pytest-azurepipelines
     {[testenv]deps}
