--- a/.github/workflows/test_napari_widgets.yml
+++ b/.github/workflows/test_napari_widgets.yml
@@ -41,7 +41,7 @@ jobs:
         include:
           - napari: "napari54"
             qt_backend: "PySide2"
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && contains(github.event.pull_request.changed_files, '.github/workflows/test_napari_widgets.yml'))
     uses: ./.github/workflows/base_test_workflow.yml
     with:
       python_version: "3.9"
