--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -126,7 +126,7 @@ jobs:
       qt_backend: ${{ matrix.qt_backend }}
       pydantic: ${{ matrix.pydantic }}
       artifact_suffix: "-main"
-      tox_args: "-- -v"
+      pytest_args: "-v"
 
   test_coverage:
     needs: download_data
