Revert "check if actions works"
This reverts commit 3b0cc0b4d6e1744535feaa5c167da118bbcf38bb.

--- a/.github/workflows/test_napari_widgets.yml
+++ b/.github/workflows/test_napari_widgets.yml
@@ -41,7 +41,7 @@ jobs:
         include:
           - napari: "napari54"
             qt_backend: "PySide2"
-    # if: github.event_name == 'push'
+    if: github.event_name == 'push'
     uses: ./.github/workflows/base_test_workflow.yml
     with:
       python_version: "3.9"
