--- a/.github/workflows/test_prereleases.yml
+++ b/.github/workflows/test_prereleases.yml
@@ -129,12 +129,12 @@ jobs:
     - name: Install dependencies
       run: |
         pip install --upgrade pip
-        pip install pip-tools
+        pip install uv
     - name: Compile and install PyInstaller requirements
       run: |
-        pip-compile --upgrade -o requirements.txt pyproject.toml requirements/pre_test_problematic_version.txt --extra pyinstaller  --pre
-        pip-sync
-        pip install .
+        uv pip compile --upgrade -o requirements.txt pyproject.toml requirements/pre_test_problematic_version.txt --extra pyinstaller  --prerelease allow
+        uv pip sync requirements.txt
+        uv pip install .
     - name: upload requirements
       uses: actions/upload-artifact@v4
       with:
