--- a/.github/workflows/test_prereleases.yml
+++ b/.github/workflows/test_prereleases.yml
@@ -133,7 +133,7 @@ jobs:
     - name: Compile and install PyInstaller requirements
       run: |
         uv pip compile --upgrade -o requirements.txt pyproject.toml requirements/pre_test_problematic_version.txt --extra pyinstaller  --prerelease allow
-        uv pip sync --system requirements.txt
+        uv pip install -r requirements.txt
         uv pip install .
     - name: upload requirements
       uses: actions/upload-artifact@v4
