--- a/.github/workflows/test_prereleases.yml
+++ b/.github/workflows/test_prereleases.yml
@@ -122,18 +122,16 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
-      name: Install Python 3.12
+      name: Install Python
       with:
-        python-version: 3.12
+        python-version: 3.x
     - uses: tlambert03/setup-qt-libs@v1
-    - name: Install dependencies
-      run: |
-        pip install --upgrade pip
-        pip install uv
+    - name: Install uv
+      run: pip install uv
     - name: Compile and install PyInstaller requirements
       run: |
         uv pip compile --upgrade -o requirements.txt pyproject.toml requirements/pre_test_problematic_version.txt --extra pyinstaller  --prerelease allow
-        uv pip install -r requirements.txt
+        uv venv --python-version 3.12 requirements.txt
         uv pip install .
     - name: upload requirements
       uses: actions/upload-artifact@v4
@@ -141,7 +139,7 @@ jobs:
         name: requirements
         path: requirements.txt
     - name: Run PyInstaller
-      run: python  build_utils/create_and_pack_executable.py
+      run: uv run build_utils/create_and_pack_executable.py
     - name: Upload bundle
       uses: actions/upload-artifact@v4
       with:
